Inflight commit! Fixed convection derivatives test

--- a/tests/perturb_convection.yaml
+++ b/tests/perturb_convection.yaml
@@ -11,11 +11,11 @@ xf: [0.0, 1.0]
 f:  [0.0, 0.0]
 dt: 5e-7
 Hdot: 0.0
-CH: 3.06e-5
+CH: 3.0601e-5
 Tw: 300.0
 T0: 361.0
 p0: 968.0
 v0: 3623.0
 Y0: {'air': 1.0}
 
-calc_derivatives: true
+calc_derivatives: false
