Refactoring of the area change test

--- a/source/makefile
+++ b/source/makefile
@@ -133,6 +133,7 @@ install: $(PROGRAMS)
 	- mkdir -p $(BUILD_DIR)/bin
 	- mkdir -p $(BUILD_DIR)/lib
 	- cp swft $(BUILD_DIR)/bin
+	- cp libswft.py $(BUILD_DIR)/lib
 	cp $(LUA_DIR)/install/bin/* $(BUILD_DIR)/bin
 	cp $(LUA_DIR)/install/lib/lpeg.so $(BUILD_DIR)/lib
 	cp -r $(DGD_REPO)/src/lib/* $(BUILD_DIR)/lib
